--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</script>
 </div></div><div  id="placeh_91ac625" >
   <div class="textstyle6">
-<div id="container_62a35519"><div id="container_62a35519_padding" ><div class="textstyle6"><div id="container_52a9ad69"><div class="textstyle1"><span class="textstyle7">Welcome to SEMO Fleet Sales! </span><span class="textstyle8">&#128666;</span><span class="textstyle9"><br/></span><div id="container_381e378b"><div id="container_381e378b_padding" ><div class="textstyle1"><div id="container_235882ac"><div class="textstyle1"><span class="textstyle10">At SEMO Fleet Sales, we redefine convenience in commercial vehicle acquisition! SEMO Fleet Sales is your trusted partner in the world of fleet sales, and we're here to revolutionize how you get the vehicles your business needs. With over 8 years of experience, SEMO knows the ins and outs of the commercial fleet industry like no one else. Our mission is to ensure that you don't have to step foot on a dealership lot to get the perfect vehicles for your business!<br/><br/></span><span class="textstyle11">What Sets Us Apart:</span><span class="textstyle10"><br/></span><ul id="ul_7c729cb" class="ulstyle1">
+<div id="container_62a35519"><div id="container_62a35519_padding" ><div class="textstyle6"><div id="container_52a9ad69"><div class="textstyle1"><span class="textstyle7">We Are SEMO Fleet Sales! </span><span class="textstyle8">&#128666;</span><span class="textstyle9"><br/></span><div id="container_381e378b"><div id="container_381e378b_padding" ><div class="textstyle1"><div id="container_235882ac"><div class="textstyle1"><span class="textstyle10">At SEMO Fleet Sales, we redefine convenience in commercial vehicle acquisition! SEMO Fleet Sales is your trusted partner in the world of fleet sales, and we're here to revolutionize how you get the vehicles your business needs. With over 8 years of experience, SEMO knows the ins and outs of the commercial fleet industry like no one else. Our mission is to ensure that you don't have to step foot on a dealership lot to get the perfect vehicles for your business!<br/><br/></span><span class="textstyle11">What Sets Us Apart?</span><span class="textstyle10"><br/></span><ul id="ul_7c729cb" class="ulstyle1">
 <li><span class="textstyle10">No More Dealership Hassles - Say goodbye to long hours at the dealership. SEMO takes the hassle out of fleet sales by bringing the dealership experience to you.</span></li>
 </ul>
     <span class="textstyle10">&nbsp;</span>
@@ -76,15 +76,16 @@
 </ul>
     <span class="textstyle10">&nbsp;</span>
 <ul id="ul_5f4f2390" class="ulstyle1">
-<li><span class="textstyle10">Delivered to You - Your new vehicle is delivered to your door. No dealership visit required!</span></li>
+<li>    <span class="textstyle10">Delivered to You - Your new vehicle is delivered to your door! No dealership visit required - </span>
+<span class="textstyle12">EVER</span><span class="textstyle10">!</span><span class="textstyle2"></span></div>
+</li>
 </ul>
-<span class="textstyle10"><br/></span><span class="textstyle2"><br/></span><span class="textstyle2">De</span></div>
 </div></div>
-<div style="clear:both"></div></div></div><span class="textstyle12"><br/><br/><br/><br/></span><span class="textstyle13"><br/><br/><br/></span><span class="textstyle12"><br/><br/><br/><br/><br/><br/></span></div>
+<div style="clear:both"></div></div></div><span class="textstyle13"><br/><br/><br/><br/></span><span class="textstyle14"><br/><br/><br/></span><span class="textstyle13"><br/><br/><br/><br/><br/><br/></span></div>
 </div></div>
 <div style="clear:both"></div></div></div>    </div>
   <div class="textstyle1">
-<span class="textstyle14"><br/></span>    </div>
+<span class="textstyle15"><br/></span>    </div>
 </div>
   </div>
 </body>
