--- a/services.html
+++ b/services.html
@@ -11,14 +11,16 @@
 <div class="textstyle1">
 <a href="index.html"><img src="rc_images/semofleetlogo1080.jpg" width="1024" height="390" id="img_3c70b732" alt="" title="" border="0" /></a>  </div>
 <div class="textstyle2">
-<span class="textstyle3"><br/></span><div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
+<span class="textstyle3"><br/></span>  </div>
+<div class="textstyle1">
+<div id="menu_12dc9f48"><div  class="menuholder1"><a href="javascript:void(0);">
 	<div id="menuentry_24ad08ac"  class="menustyle1 menu_12dc9f48_mainMenuEntry mobileEntry">
 		<div class="menuentry_text1">
   <span class="textstyle4">&#8801;</span>
 		</div>
 	</div>
 </a>
-<a href="whoweare.html" style="text-decoration:none">
+<a href="index.html" style="text-decoration:none">
 	<div id="menuentry_3b4af324"  class="menustyle2 menu_12dc9f48_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
   <span class="textstyle5">Who We Are</span>
@@ -51,7 +53,7 @@
 	<script type="text/javascript">
 		var js_menu_12dc9f48= new wsp_menu('menu_12dc9f48', 'menu_12dc9f48', 10, null, true);
 
-		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle6\">Who We Are</span> ", 'whoweare.html', '',
+		js_menu_12dc9f48.createMenuForItem('menuentry_24ad08ac', ["  <span class=\"textstyle6\">Who We Are</span> ", 'index.html', '',
 		                                   "  <span class=\"textstyle6\">Services We Offer</span> ", 'services.html', '',
 		                                   "  <span class=\"textstyle6\">Photos and Video</span> ", 'media.html', '',
 		                                   "  <span class=\"textstyle6\">Contact Us</span> ", 'contact.html', '']);
@@ -62,23 +64,15 @@
 
 	</script>
 </div></div><div  id="placeh_91ac625" >
+  <div class="textstyle1">
+<div id="container_4473df6d"><div id="container_4473df6d_padding" ><div class="textstyle1"><div id="container_42a8e7dd"><div class="textstyle1"><span class="textstyle7"><br/>Services We Offer<br/><br/></span></div>
+<div class="textstyle2"><div id="container_3f2be38f"><div id="container_3f2be38f_padding" ><div class="textstyle2"><div id="container_4c93732e"><div class="textstyle2"></div>
+</div></div>
+<div style="clear:both"></div></div></div><span class="textstyle8"><br/></span><span class="textstyle9">Commercial Trucks, Vans, and Vehicles<br/><br/>Work Trucks<br/><br/>Custom Fleet Solutions<br/></span><span class="textstyle8"><br/></span><span class="textstyle10"><br/><br/><br/><br/><br/><br/></span></div>
+</div></div>
+<div style="clear:both"></div></div></div>    </div>
   <div class="textstyle2">
-<span class="textstyle7"><br/></span><span class="textstyle8">Services We Offer:</span><span class="textstyle9"><br/></span>    <ul id="ul_42787e73" class="ulstyle1">
-      <li><span class="textstyle9">Commercial Vans or Vehicles&#128656;</span>        </li>
-      </ul>
-    <span class="textstyle9">&nbsp;</span>
-    <ul id="ul_4c60c1f9" class="ulstyle1">
-      <li>        <span class="textstyle9">Work Trucks &#128667;</span>
-        </li>
-      </ul>
-    <span class="textstyle9">&nbsp;</span>
-    <ul id="ul_688e5a48" class="ulstyle1">
-      <li>        <span class="textstyle9">Custom Fleet Solutions &#9989;</span>
-        </li>
-      </ul>
-    <span class="textstyle9">&nbsp;</span>
-    <span class="textstyle10"><br/></span>
-    </div>
+<span class="textstyle11"><br/></span>    </div>
 </div>
   </div>
 </body>
